--- a/src/index.css
+++ b/src/index.css
@@ -77,6 +77,6 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground font-sans;
+    @apply bg-primary-foreground font-sans text-foreground;
   }
 }
